--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
+
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./main.py",
-            "use": "@vercel/python"
-        }
+      {
+        "src": "./main.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "main.py"
+      }
     ]
-}
+  }
+  
