fix mistake in requirments.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ MarkupSafe==1.1.1
 itsdangerous==1.1.0
 Werkzeug==1.0.1
 lxml
-webdriver-manager=4.0.0
-selenium=4.9.1
+webdriver-manager==4.0.0
+selenium==4.9.1
 
