--- a/render.yaml
+++ b/render.yaml
@@ -13,8 +13,7 @@ services:
   - name: splash-server
     type: web
     env: docker
-    repo: https://github.com/scrapinghub/splash
-    dockerfilePath: Dockerfile
+    image: scrapinghub/splash  # Use official Docker Hub image
     plan: free
     envVars:
       - key: PORT
