--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,9 @@ services:
   - name: splash-server
     type: web
     env: docker
-    image: scrapinghub/splash  # Use official Docker Hub image
+    repo: https://github.com/paul-antony/bse_dashboard
+    branch: scrappy_deployment
+    dockerfilePath: splash.Dockerfile  # Create a new Dockerfile for Splash
     plan: free
     envVars:
       - key: PORT
